[package]
name = "authentication-service"
version = "0.1.0"
edition = "2021"

[dependencies]
base64-url = "2.0.0"
bincode = "1.3.3"
chrono = { version = "0.4.31", features = ["serde"] }
openssl = "0.10.59"
rand = "0.8.5"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.190", features = ["derive"] }
